# anofel

./: .gitignore  ARTIFACT-EVALUATION.md  LICENSE  README.md  copyright
anofel-snark/src/: CMakeLists.txt  stubs.cpp  stubs.hpp  types.hpp  utils.cpp  utils.hpp
anofel-snark/src/gadgets/: CMakeLists.txt  field2bits_strict.cpp  field2bits_strict.hpp  isnonzero.cpp  isnonzero.hpp  lookup_1bit.cpp  lookup_1bit.hpp  lookup_2bit.cpp  lookup_2bit.hpp  lookup_signed_3bit.cpp  lookup_signed_3bit.hpp  merkle_path_check.hpp  merkle_tree.cpp  merkle_tree.hpp  mimc.hpp  onewayfunction.hpp  sha256_full.hpp  sha256_many.cpp  sha256_many.hpp
anofel-snark/src/jubjub/: CMakeLists.txt  adder.cpp  adder.hpp  anofel_setup.cpp  anofel_setup.hpp  anofel_training.cpp  anofel_training.hpp  commitment.cpp  commitment.hpp  conditional_point.cpp  conditional_point.hpp  doubler.cpp  doubler.hpp  eddsa.cpp  eddsa.hpp  fixed_base_mul.cpp  fixed_base_mul.hpp  fixed_base_mul_zcash.cpp  fixed_base_mul_zcash.hpp  isoncurve.cpp  isoncurve.hpp  montgomery.cpp  montgomery.hpp  notloworder.cpp  notloworder.hpp  params.hpp  pedersen_hash.cpp  pedersen_hash.hpp  point.cpp  point.hpp  pub_key.cpp  pub_key.hpp  scalarmult.cpp  scalarmult.hpp  validator.cpp  validator.hpp
anofel-snark/src/test/: CMakeLists.txt  test_anofel_setup.cpp  test_anofel_training.cpp  test_isnonzero.cpp  test_jubjub_add.cpp  test_jubjub_commitment  test_jubjub_eddsa.cpp  test_jubjub_hash.cpp  test_jubjub_mul_fixed.cpp  test_jubjub_mul_fixed_zcash.cpp  test_jubjub_point  test_jubjub_pubkey.cpp  test_merkle.cpp  test_merkle_tree.cpp  (+4 more)
(+23 files in other folders)
